# SimpleSnakeSDL3

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
